# insigno_backend

./: .dockerignore  .gitignore  Cargo.toml  Cargo_backup_before_refactor.toml  Dockerfile  Insigno.toml  Jenkinsfile  README.md  Rocket.toml  build-and-push.sh  document  log  manage.py  nohup.err  requirements.txt  stress-test.js  test  test.sh  tree
.github/workflows/: rust.yml
app/: admin.py  models.py
app/migrations/: 0001_initial.py
docker/: Caddyfile  Dockerfile.caddy  Insigno.toml  backup-volumes.sh  db-insigno-grafana.yml  db-insigno.yml  prometheus.yml  test
docker/dalvany-image-panel/: MANIFEST.txt  module.js  module.js.map  plugin.json
docker/dashboards/: insigno.json
docker/grafana-provisioning/dashboards/: dashboard_loader.yaml
docker/grafana-provisioning/datasources/: prometheus.yaml
docker/mapproxy/: mapproxy.yaml  seed.yaml
docker/templates/: account_creation.html  mail_change_password_plain.txt
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/insignolib/: all.html  fn.main.html  fn.rocket.html  index.html  macro.erase_tables!.html  macro.erase_tables.html  sidebar-items.js  struct.InsignoConfig.html  struct.TrashTypeMap.html
docs/insignolib/auth/: fn.get_routes.html  fn.get_user.html  index.html  sidebar-items.js  struct.AutenticatedUserTest.html
docs/src/insignolib/: cors.rs.html  db.rs.html  lib.rs.html  mail.rs.html  pending.rs.html  pills.rs.html  schema_rs.rs.html  schema_sql.rs.html  utils.rs.html
fuzz/: Cargo.toml  generate-coverage  test.html
fuzz/fuzz_targets/: fuzz_target_1.rs
insignio/: apps.py
insignio_backend/: asgi.py  settings.py  urls.py  wsgi.py
lib/rocket_auth/: Cargo.toml  diff
map/: admin.py  apps.py  form.py  models.py  urls.py  views.py
map/migrations/: 0001_initial.py  0002_marker_type.py  0003_remove_marker_x_remove_marker_y_marker_xy.py  0004_alter_marker_type.py  0005_alter_marker_type.py  0006_alter_marker_xy.py  0006_marker_creationdate_alter_marker_xy_markerimage.py  0007_merge_20221026_1946.py  0008_remove_markerimage_marker_id_delete_marker_and_more.py  0009_initial.py  0010_remove_markerimage_marker_id_delete_marker_and_more.py  0011_initial.py  0012_marker_delete_markerimage.py  0013_markerimage.py  0014_remove_marker_creationdate_remove_marker_type_and_more.py  0015_marker_creationdate_marker_type_marker_xy_and_more.py  0016_remove_markerimage_marker_id_delete_marker_and_more.py  0017_initial.py  0018_alter_markerimage_image.py  0019_alter_markerimage_image.py
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-01-22-104759_Pill/: up.sql
migrations/2023-01-22-104759_Pills/: up.sql
migrations/2023-01-22-104759_pills/: down.sql  up.sql
migrations/2023-01-25-075527_TrashType/: down.sql  up.sql
migrations/2023-01-25-075527_TrashTypes/: down.sql  up.sql
migrations/2023-01-25-075527_marker_types/: down.sql  up.sql
migrations/2023-01-25-075528_users/: down.sql  up.sql
migrations/2023-01-25-075530_user_sessions/: down.sql  up.sql
migrations/2023-01-25-080820_Marker/: down.sql  up.sql
migrations/2023-01-25-080820_markers/: up.sql
migrations/2023-02-05-221140_marker_images/: down.sql  up.sql
migrations/2023-03-03-105436_groups/: down.sql  up.sql
migrations/2023-03-04-132433_users_groups_join/: down.sql  up.sql
migrations/2023-03-04-132434_groups_groups_join/: down.sql  up.sql
migrations/2023-03-04-132533_functions/: down.sql  tmp  up.sql
migrations/2023-03-13-135157_marker_reports/: down.sql  up.sql
migrations/2023-03-13-135157_markers_reports/: down.sql  up.sql
migrations/2023-03-26-173007_Pending/: down.sql  up.sql
migrations/2023-03-26-173007_Pending_users/: down.sql  up.sql
migrations/2023-03-26-173007_pending/: down.sql  up.sql
migrations/2023-09-09-143628_accept_review/: down.sql  up.sql
migrations/2023-09-09-143628_eta-avvio/: down.sql  up.sql
migrations/2023-09-12-094920_new-reports/: down.sql  up.sql
migrations/2023-09-12-094920_verify_session/: down.sql  up.sql
migrations/2023-10-09-143951_verify_verdict/: down.sql  up.sql
migrations/2023-10-16-090225_get_near/: down.sql  up.sql
migrations/2023-10-16-095411_special_scoreboard/: down.sql  up.sql
migrations/2023-10-19-143353_image_ref/: up.sql
pills/: admin.py  models.py  urls.py  views.py
pills/migrations/: 0001_initial.py  0002_pill_author_pill_source.py  0003_alter_pill_source.py
project/: settings.py  urls.py
rocket-diesel/: Cargo.toml  Rocket.toml
rocket-diesel/Docker/: docker-compose.yml
rocket-diesel/migrations/2023-01-22-104759_Pill/: down.sql
rocket-diesel/src/: main.rs  pills.rs
src/: auth.rs  cors.rs  db.rs  insigno_point.rs  lib.rs  mail.rs  main.rs  map.rs  pending.rs  pills.rs  schema.rs  schema_rs.rs  schema_sql.rs  test.rs  trash.rs  utils.rs
src/auth/: admin_user.rs  authenticated_user.rs  authentication.rs  change_password.rs  delete_account.rs  login.rs  login_info.rs  mail_auth.rs  mod.rs  pending_user.rs  scrypt.rs  signup.rs  signup_info.rs  user.rs  validation.rs
src/files/: intro_screen.rs  mod.rs
src/mail/: mail_builder.rs  mod.rs
src/map/: image.rs  marker_image.rs  marker_report.rs  mod.rs
src/scoreboard/: mod.rs
src/test/: mod.rs
src/verification/: mod.rs  sql.rs
templates/: footer.html  header.html  mail.html  mail_account_creation.html  mail_account_creation_plain.txt  mail_account_delete.html  mail_account_delete_plain.txt  mail_change_password.html  mail_change_password_plain.txt  template.toml
tests/fuzz/: Cargo.toml  generate-coverage  test.html
tests/goose/: Cargo.toml  report.html
(+107 files in other folders)
