[package]
name = "insigno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="insigno"
path = "src/main.rs"

[lib]
name="insignolib"
path = "src/lib.rs"

[dependencies]
diesel = {version="2.0.3", default-features = false, features = ["chrono", "postgres"] }
postgis_diesel = {version="2.1.0", default-features = false}
#postgis = "0.9.0"
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"], default-features = false } #"tls",
rocket_sync_db_pools = { version = "0.1.0-rc.3", default-features = false, features = ["diesel_postgres_pool"] }
rocket-multipart-form-data = "0.10.5"

serde = { default-features = false, version = "1.0.158" }
rand = { default-features = false, version = "0.8.5" }
chrono= {version = "0.4.24", features= ["serde"], default-features = false }

scrypt = { features = ["std", "simple"], default-features = false, version = "0.11.0" }
base64 = { default-features = false, version = "0.21.0" }
constant_time_eq = "0.2.5"

lettre = {version="0.10", default-features = false, features= ["tokio1-rustls-tls", "pool", "builder", "smtp-transport"] }
rocket_prometheus = "0.10.0-rc.3"
prometheus= {version="0.13.3", default-features = false, features= ["process"]}

regex = { features = ["std"], default-features = false, version = "1.7.3" }

[dev-dependencies]
form-data-builder = "1.0.1"
