[package]
name = "insigno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="insigno"
path = "src/main.rs"

[lib]
name="insignolib"
path = "src/lib.rs"

[dependencies]
openssl-sys = { version = "*", features = ["vendored"] }
diesel_migrations = {version="2.2.0"}
diesel = {version="2.2.11", default-features = false, features = ["chrono", "postgres"] }
postgis_diesel = { version="3.0.1" }
#postgis = "0.9.0"
rocket = { version = "0.5.1", features = ["json", "secrets"], default-features = false } #"tls",
rocket_sync_db_pools = { version = "0.1.0", default-features = false, features = ["diesel_postgres_pool"] }

serde = { default-features = false, version = "1.0" }
rand = { default-features = false, version = "0.8" }
chrono= {version = "0.4", features= ["serde"], default-features = false }

scrypt = { features = ["std", "simple"], default-features = false, version = "0.11" }
base64 = { default-features = false, version = "=0.22.1" }
constant_time_eq = "0.3"

lettre = {version="0.11.2", default-features = false, features= ["tokio1-rustls-tls", "pool", "builder", "smtp-transport"] }
rocket_prometheus = "0.10.0"
prometheus= {version="0.13.3", default-features = false, features= ["process"]}
pq-sys={version="0.6", features = ["bundled"]}

regex = { features = ["std"], default-features = false, version = "1.9" }

[dev-dependencies]
form-data-builder = "1.0"

[patch.crates-io]
pq-src = { path = "../pq-sys/pq-src" }