[package]
name = "insigno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="insigno"
path = "src/main.rs"

[lib]
name="insignolib"
path = "src/lib.rs"

[dependencies]

diesel_migrations = {version="2.2.0"}
diesel = {version="2.2.11", default-features = false, features = ["chrono", "postgres"] }
postgis_diesel = { version="3.0.1" }
#postgis = "0.9.0"
rocket = { version = "0.5.1", features = ["json", "secrets"], default-features = false } #"tls",
rocket_sync_db_pools = { version = "0.1.0", default-features = false, features = ["diesel_postgres_pool"] }

serde = { default-features = false, version = "1.0" }
rand = { default-features = false, version = "0.9" , features = ["thread_rng"]}
chrono= {version = "0.4", features= ["serde"], default-features = false }

scrypt = { features = ["std", "simple"], default-features = false, version = "0.11" }
base64 = { default-features = false, version = "=0.22.1" }
constant_time_eq = "0.4"

lettre = {version="0.11.2", default-features = false, features= ["tokio1-rustls-tls", "pool", "builder", "smtp-transport"] }
rocket_prometheus = "0.10.0"
prometheus= {version="0.13.3", default-features = false, features= ["process"]}
regex = { features = ["std"], default-features = false, version = "1.12" }

pq-sys={version="0.7.1", features = ["bundled"]}
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9.103", features = ["vendored"] }
fast_image_resize = {version="5.3.0", features=["image"]}
image = "0.25.8"


[dev-dependencies]
form-data-builder = "1.0"

#[patch.crates-io]
#pq-src = { path = "../pq-sys/pq-src" }